--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 body {
   background-color: #ffffff;
   color: var(--primary-text-color);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
 }
 
@@ -126,7 +126,7 @@ img {
 
   bottom: 0;
   left: 0;
-  content: '';
+  content: "";
   background-color: var(--accent-color);
   width: 100%;
   height: 4px;
@@ -204,6 +204,8 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin: 0 auto;
+
+  margin-bottom: 30px;
 }
 
 .icon-mail {
@@ -215,7 +217,7 @@ img {
 /* advantages */
 
 .item-adv-list::before {
-  content: '';
+  content: "";
   display: flex;
   background-color: #f5f4fa;
   width: 270px;
@@ -339,13 +341,16 @@ img {
   background-color: transparent;
   width: 44px;
   height: 44px;
+  fill: var(--unactive-color);
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link:hover,
 .team-link:focus {
   background-color: var(--accent-color);
+  fill: #ffffff;
 }
 
 .team-list .team-item + .team-item {
@@ -373,29 +378,6 @@ img {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-
-.team-icon {
-  fill: var(--unactive-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: transparent;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  fill: var(--unactive-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* .team-link:hover .team-icon,
-.team-link:focus .team-icon {
-  fill: #ffffff;
-} */
 
 /* clients */
 
@@ -471,7 +453,7 @@ img {
   color: var(--accent-color);
 
   text-decoration: none;
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
   line-height: 1.49;
@@ -540,6 +522,54 @@ img {
 
 .footer-soc-link + .footer-soc-link {
   margin-left: 10px;
+}
+
+/* footer modal */
+
+.subscribe {
+  display: block;
+  color: inherit;
+  margin-left: auto;
+}
+
+.subscribe-title {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.subscribe-form {
+  display: flex;
+}
+
+.subscribe-input {
+  display: flex;
+  padding-left: 16px;
+  width: 358px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--banner-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: var(--banner-color);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  margin-right: 12px;
+}
+
+.subscibe-icon {
+  margin-left: 10px;
+  fill: currentColor;
+}
+
+.footer-button {
+  display: flex;
+  align-items: center;
+  padding: 10px 28px;
+  max-width: 200px;
 }
 
 /* portfolio css */
@@ -641,7 +671,7 @@ img {
   color: var(--accent-color);
 
   text-decoration: none;
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -662,11 +692,10 @@ img {
 
   height: 50px;
   min-width: 200px;
-  padding: 10px 32px 10px 32px;
+  /* padding: 10px 32px 10px 32px; */
   vertical-align: middle;
   text-align: center;
   margin: 0 auto;
-  margin-top: 30px;
 
   font-weight: 700;
   font-size: 16px;
@@ -684,7 +713,7 @@ img {
 .button-secondary {
   padding: 6px 22px;
 
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -748,8 +777,9 @@ img {
 
 .button-close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 8px;
+  display: flex;
   justify-content: center;
   align-items: center;
   margin-left: auto;
@@ -759,13 +789,7 @@ img {
   background-color: inherit;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  cursor: pointer;
-}
-
-.icon-close {
-  position: absolute;
-  top: 5px;
-  left: 5px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close {
@@ -778,10 +802,13 @@ img {
 }
 
 .backdrop-title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
   font-size: 20px;
   line-height: 23px;
   text-align: center;
-  letter-spacing: 1.15;
+  letter-spacing: 0.03em;
   margin-bottom: 12px;
 
   color: #212121;
@@ -857,6 +884,11 @@ img {
   fill: var(--accent-color);
 }
 
+.modal-policy {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
 .modal-policy-label {
   display: flex;
   align-items: center;
@@ -878,17 +910,29 @@ img {
   border-bottom: 1px solid var(--accent-color);
 }
 
-.modal-check:checked + .modal-custom- {
+.modal-check:checked + .modal-custom {
   border: 2px solid var(--accent-color);
   background-color: var(--accent-color);
 }
 
-.modal-check:focus + .modal-custom-check {
-  background-color: var(--accent-color);
+.modal-check:hover + .modal-policy-text::before {
+  border-color: 2px solid var(--accent-color);
+  color: var(--accent-color);
 }
 
-.modal-label {
-  margin-bottom: 10px;
+.modal-label + .modal-label {
+  margin-top: 10px;
+}
+
+.modal-policy-text span {
+  width: 16px;
+  height: 16px;
+  border: 2px solid black;
+  border-radius: 2px;
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .visually-hidden {
@@ -905,11 +949,31 @@ img {
 }
 
 .modal-policy-text {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  margin-left: 8px;
+  display: flex;
+  align-items: center;
+
+  color: var(--secondary-text-color);
+}
+
+.modal-policy-text::before {
+  content: "";
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 4px;
+  margin-right: 8px;
+}
+
+.modal-check:checked + .modal-policy-text::before {
+  background-color: var(--accent-color);
+  background-image: url(../images/checked.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+  border: none;
+  background-position: -2.5px 2px;
 }
